# src/app.js
@@ -11,6 +11,7 @@ const contextMiddleware = require('./core/execution-context/contextMiddleware');
 const indexRouter = require('./routes');
 const healthRouter = require('./routes/health');
 const todosRouter = require('./routes/todos');
+const postsRouter = require('./routes/posts');
 
 const app = express();
 
@@ -20,10 +21,32 @@ app.use(cookieParser());
 app.use(express.static(path.join(__dirname, 'public')));
 app.use(contextMiddleware);
 
+//todo: Centralized Error Handling Middleware
+app.use((err, req, res, next) => {
+    // Log the error for debugging
+    console.error(`Error: ${err.message}`);
+    console.error(`Stack: ${err.stack}`);
+
+    // Set the default error status code and message
+    const statusCode = err.statusCode || 500;
+    const errorMessage = err.message || 'Internal Server Error';
+
+    // Respond with a consistent error structure
+    res.status(statusCode).json({
+        success: false,
+        error: {
+            message: errorMessage,
+            // Only include the stack trace in development
+            ...(process.env.NODE_ENV === 'development' && { stack: err.stack }),
+        },
+    });
+});
+
 app.use('/api-spec', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 
 app.use('/', indexRouter);
 app.use('/', healthRouter);
 app.use('/todos', todosRouter);
+app.use('/posts', postsRouter);
 
 module.exports = app;
